优化引入twikoo的代码逻辑，封装自定义hook

--- a/react-blog-admin/public/index.html
+++ b/react-blog-admin/public/index.html
@@ -5,6 +5,16 @@
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="飞鸟的博客后台管理" />
+        <link
+            rel="preload"
+            href="https://jack-img.oss-cn-hangzhou.aliyuncs.com/js/twikoo.all.min.js"
+            as="script"
+        />
+        <link
+            rel="preload"
+            href="https://jack-img.oss-cn-hangzhou.aliyuncs.com/js/twikooConfig.js"
+            as="script"
+        />
         <title>飞鸟小窝</title>
     </head>
     <body>
