添加网站资讯模块

--- a/react-blog-admin/public/index.html
+++ b/react-blog-admin/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="飞鸟的博客后台管理" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <link
             rel="preload"
             href="https://jack-img.oss-cn-hangzhou.aliyuncs.com/js/twikoo.all.min.js"
@@ -15,6 +15,7 @@
             href="https://jack-img.oss-cn-hangzhou.aliyuncs.com/js/twikooConfig.js"
             as="script"
         />
+        <meta name="description" content="飞鸟的博客后台管理" />
         <title>飞鸟小窝</title>
     </head>
     <body>
