--- a/react-blog/public/index.html
+++ b/react-blog/public/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+        <link rel="stylesheet" href="%PUBLIC_URL%/animate.min.css" />
+        <!-- <script src="https://jack-img.oss-cn-hangzhou.aliyuncs.com/js/wow.min.js"></script> -->
+        <!-- <script>
+            new WOW().init();
+        </script> -->
         <meta name="description" content="飞鸟的个人博客。" />
         <title>飞鸟</title>
     </head>
