--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" />
     <link rel="shortcut icon" href="#" />
-    <title>My React</title>
+    <title>飞鸟小站后台管理</title>
   </head>
   <body>
     <div id="root"></div>
